--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 </head>
 <body>
-  <a href="https://www.storiesbyanansi.com/" onclick="openInDefaultBrowser(event)">Link</a>
+  <a href="https://www.storiesbyanansi.com/" onclick="openInDefaultBrowser(event)">Open Stories by Anansi</a>
 
     <script>
       console.log("HELLLO WORLD!");
